--- a/src/js/auth/auth.html
+++ b/src/js/auth/auth.html
@@ -4,23 +4,23 @@
             <div class="col-md-6 offset-md-3 col-xs-12">
                 <h1 class="text-xs-center" ng-bind="::$ctrl.title"></h1>
                 <p class="text-xs-center">
-                    <a ui-sref="app.login" ng-show="$ctrl.authType=== 'register'">
+                    <a ui-sref="app.login" ng-show="$ctrl.authType === 'register'">
                         Have an account?
                     </a>
-                    <a ui-sref="app.register" ng-show="$ctrl.authType=== 'login'">
+                    <a ui-sref="app.register" ng-show="$ctrl.authType === 'login'">
                         Need an account?
                     </a>
                 </p>
                 <form ng-submit="$ctrl.submitForm()">
                     <fieldset ng-disabled="$ctrl.isSubmitting">
-                        <fieldset class="form-group" ng-show-"$ctrl.authType==='register'">
-                            <input type="text" class="form-control form-control-lg" placeholder="Username" ng-model=$ctrl.formData.username />
+                        <fieldset class="form-group" ng-show="$ctrl.authType ==='register'">
+                            <input type="text" class="form-control form-control-lg" placeholder="Username" ng-model="$ctrl.formData.username" />
                         </fieldset>
                         <fieldset class="form-group">
-                            <input type="email" class="form-control form-control-lg" placeholder="Email" ng-model=$ctrl.formData.email />
+                            <input type="email" class="form-control form-control-lg" placeholder="Email" ng-model="$ctrl.formData.email" />
                         </fieldset>
                             <fieldset class="form-group">
-                                <input type="password" class="form-control form-control-lg" placeholder="Password" ng-model=$ctrl.formData.password />
+                                <input type="password" class="form-control form-control-lg" placeholder="Password" ng-model="$ctrl.formData.password" />
                             </fieldset>
                             <button type="submit" class="btn btn-lg btn-primary pull-xs-small" ng-bind="$ctrl.title"></button>
 
